highlight 플러그인을 이용한 검색 단어 강조 기능 추가

--- a/src/index.css
+++ b/src/index.css
@@ -1525,6 +1525,12 @@ input:disabled {
     left: auto;
     display: inline-block;
     margin-bottom: 8px;
-    max-width: calc(100% - 30px); /* Leave space for delete button if visible */
+    max-width: calc(100% - 30px);
+    /* Leave space for delete button if visible */
   }
+}
+
+.highlight {
+  background-color: #fcff35;
+  color: #202124;
 }
